--- a/package.json
+++ b/package.json
@@ -1,11 +1,24 @@
 {
   "name": "scroll-and-fade-text",
-  "private": true,
-  "version": "0.0.0",
+  "private": false,
+  "version": "0.1.0",
   "type": "module",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/scroll-and-fade-text.umd.cjs",
+  "module": "./dist/scroll-and-fade-text.js",
+  "exports": {
+    ".": {
+      "import": "./dist/scroll-and-fade-text.js",
+      "require": "./dist/scroll-and-fade-text.umd.cjs"
+    },
+    "./style.css": "./dist/style.css"
+  },
+  "types": "./dist/index.d.ts",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "vite build && vue-tsc --emitDeclarationOnly",
     "preview": "vite preview"
   },
   "dependencies": {
