--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "scroll-and-fade-text",
   "private": false,
-  "version": "1.0.0",
+  "version": "1.0.3",
   "keywords": [
     "vue",
     "vue3",
@@ -27,11 +27,11 @@
   "exports": {
     ".": {
       "import": "./dist/scroll-and-fade-text.js",
-      "require": "./dist/scroll-and-fade-text.umd.cjs"
+      "require": "./dist/scroll-and-fade-text.umd.cjs",
+      "types": "./dist/index.d.ts"
     },
     "./style.css": "./dist/style.css"
   },
-  "types": "./dist/index.d.ts",
   "scripts": {
     "dev": "vite",
     "build": "vite build && vue-tsc --emitDeclarationOnly",
