--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "vue3",
     "component",
     "animated",
-    "text"
+    "scroll", 
+    "fade",
+    "text",
+    "carousel"
   ],
   "license": "MIT",
   "homepage": "https://github.com/gsproston/scroll-and-fade-text#readme",
