--- a/package.json
+++ b/package.json
@@ -39,15 +39,21 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build && vue-tsc --emitDeclarationOnly",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
+    "format": "prettier --write src/"
   },
   "dependencies": {
     "vue": "^3.4.21"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "@vue/eslint-config-typescript": "^14.5.0",
+    "eslint": "^9.23.0",
+    "eslint-plugin-vue": "^10.0.0",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0",
+    "vite": "^6.2.3",
     "vue-tsc": "^2.0.6"
   }
 }
